# azcam-observe

./: README.md  pyproject.toml
azcam_observe/observe/: __main__.py  observe_common.py
azcam_observe/observe/observe_cli/: observe_cli.py
azcam_observe/observe/observe_qt/: observe_qt.py
support/: start_observe.bat
